metadata/force-app/main/default/objects/CustomName_mQNfq__c/CustomName_mQNfq__c.object-meta.xml
<CustomObject>
    <description>Description_QfnEO</description>
    <label>CustomLabel_dwdDL</label>
    <nameField>
        <label>CustomLabel_dwdDL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dwdDLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>