metadata/force-app/main/default/objects/CustomName_mQNfq__c/fields/CustomField_aoYVN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aoYVN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmrCGZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>