metadata/force-app/main/default/objects/CustomName_mQNfq__c/fields/CustomField_SmpJE__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SmpJE__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUWiey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>